--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
   <head>
+	  <meta name="google-site-verification" content="LmeaHLIjUsd-o1iVykYTOOD7roPn56C6OW6K__AO0pg" />
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>SoftBit | Bootstrap 5 SaaS Landing Page</title>
